frontend: fixed input field bug - input value and lable text are overlapped when it's entered

--- a/client/src/components/formInput/formInput.styles.scss
+++ b/client/src/components/formInput/formInput.styles.scss
@@ -28,7 +28,8 @@ $main-color: black;
       outline: none;
     }
 
-    &:focus ~ .form-input-label {
+    &:focus ~ .form-input-label,
+    &:not(:placeholder-shown) ~ .form-input-label {
       @include shrinkLabel();
     }
   }
